# telco

telco/: README.txt  pyproject.toml  requirements.txt
telco/conf/base/: catalog.yml  parameters_data_science.yml
telco/docs/source/: conf.py  index.rst
telco/mlruns/models/telco/: meta.yaml
telco/src/telco/: __init__.py  __main__.py  pipeline_registry.py  settings.py
telco/src/telco/pipelines/data_processing/: nodes.py  pipeline.py
telco/src/telco/pipelines/data_science/: nodes.py  pipeline.py
